force-app/main/default/objects/LimitWatcherLog__c/LimitWatcherLog__c.object-meta.xml
<CustomObject>
    <description>System limit monitoring log entries</description>
    <label>Limit Watcher Log Entry</label>
    <nameField>
        <displayFormat>LIMIT-{0000000}</displayFormat>
        <label>Limit Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limit Watcher Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>