force-app/main/default/objects/LimitWatcherLog__c/fields/AggregateQueries__c.field-meta.xml
<CustomField>
    <fullName>AggregateQueries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Aggregate Queries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>