force-app/main/default/objects/LimitWatcherLog__c/fields/AsyncCalls__c.field-meta.xml
<CustomField>
    <fullName>AsyncCalls__c</fullName>
    <description>*** future use ***</description>
    <label>Async Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>