force-app/main/default/objects/LimitWatcherLog__c/fields/FutureCalls__c.field-meta.xml
<CustomField>
    <fullName>FutureCalls__c</fullName>
    <label>Future Calls</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>