force-app/main/default/objects/LimitWatcherLog__c/fields/MobilePushApexCalls__c.field-meta.xml
<CustomField>
    <fullName>MobilePushApexCalls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mobile Push Apex Calls</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>