force-app/main/default/objects/LimitWatcherLog__c/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <label>Operation Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>