force-app/main/default/objects/LimitWatcherLog__c/fields/PctAggregateQueries__c.field-meta.xml
<CustomField>
    <fullName>PctAggregateQueries__c</fullName>
    <formula>AggregateQueries__c / $Setup.SystemLimits__c.AggregateQueries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggregate Query %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>