force-app/main/default/objects/LimitWatcherLog__c/fields/PctAsyncCalls__c.field-meta.xml
<CustomField>
    <fullName>PctAsyncCalls__c</fullName>
    <formula>AsyncCalls__c /  $Setup.SystemLimits__c.AsyncCalls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Async Calls %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>