force-app/main/default/objects/LimitWatcherLog__c/fields/PctCallouts__c.field-meta.xml
<CustomField>
    <fullName>PctCallouts__c</fullName>
    <formula>Callouts__c /  $Setup.SystemLimits__c.Callouts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Callouts %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>