force-app/main/default/objects/LimitWatcherLog__c/fields/PctCPUTime__c.field-meta.xml
<CustomField>
    <fullName>PctCPUTime__c</fullName>
    <formula>CpuTime__c /  $Setup.SystemLimits__c.CpuTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPU Time %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>