force-app/main/default/objects/LimitWatcherLog__c/fields/PctDMLRows__c.field-meta.xml
<CustomField>
    <fullName>PctDMLRows__c</fullName>
    <formula>DMLRows__c /  $Setup.SystemLimits__c.DMLRows__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Rows %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>