force-app/main/default/objects/LimitWatcherLog__c/fields/PctDMLStatements__c.field-meta.xml
<CustomField>
    <fullName>PctDMLStatements__c</fullName>
    <formula>DMLStatements__c /  $Setup.SystemLimits__c.DMLStatements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Statements %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>