force-app/main/default/objects/LimitWatcherLog__c/fields/PctEmailInvocations__c.field-meta.xml
<CustomField>
    <fullName>PctEmailInvocations__c</fullName>
    <formula>EmailInvocations__c /  $Setup.SystemLimits__c.EmailInvocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Invocations %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>