force-app/main/default/objects/LimitWatcherLog__c/fields/PctFutureCalls__c.field-meta.xml
<CustomField>
    <fullName>PctFutureCalls__c</fullName>
    <formula>FutureCalls__c /  $Setup.SystemLimits__c.FutureCalls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Calls %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>