force-app/main/default/objects/LimitWatcherLog__c/fields/PctHeapSize__c.field-meta.xml
<CustomField>
    <fullName>PctHeapSize__c</fullName>
    <formula>HeapSize__c /  $Setup.SystemLimits__c.HeapSize__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heap Size %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>