force-app/main/default/objects/LimitWatcherLog__c/fields/PctMobilePushApexCalls__c.field-meta.xml
<CustomField>
    <fullName>PctMobilePushApexCalls__c</fullName>
    <formula>MobilePushApexCalls__c /  $Setup.SystemLimits__c.MobilePushApexCalls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Push Apex Calls %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>