force-app/main/default/objects/LimitWatcherLog__c/fields/PctPublishImmediateDML__c.field-meta.xml
<CustomField>
    <fullName>PctPublishImmediateDML__c</fullName>
    <formula>PublishImmediateDML__c /  $Setup.SystemLimits__c.PublishImmediateDML__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publish Immediate DML %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>