force-app/main/default/objects/LimitWatcherLog__c/fields/PctQueries__c.field-meta.xml
<CustomField>
    <fullName>PctQueries__c</fullName>
    <formula>Queries__c / $Setup.SystemLimits__c.Queries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOQL Query %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>