force-app/main/default/objects/LimitWatcherLog__c/fields/PctQueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>PctQueryLocatorRows__c</fullName>
    <formula>QueryLocatorRows__c /  $Setup.SystemLimits__c.QueryLocatorRows__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Query Locator Rows %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>