force-app/main/default/objects/LimitWatcherLog__c/fields/PctQueryRows__c.field-meta.xml
<CustomField>
    <fullName>PctQueryRows__c</fullName>
    <formula>QueryRows__c /  $Setup.SystemLimits__c.QueryRows__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Query Rows %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>