force-app/main/default/objects/LimitWatcherLog__c/fields/PctQueueableJobs__c.field-meta.xml
<CustomField>
    <fullName>PctQueueableJobs__c</fullName>
    <formula>QueueableJobs__c /  $Setup.SystemLimits__c.QueueableJobs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queueable Jobs %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>