force-app/main/default/objects/LimitWatcherLog__c/fields/PctSOSLQueries__c.field-meta.xml
<CustomField>
    <fullName>PctSOSLQueries__c</fullName>
    <formula>SoslQueries__c /  $Setup.SystemLimits__c.SoslQueries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOSL Queries %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>