force-app/main/default/objects/LimitWatcherLog__c/fields/QueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>QueryLocatorRows__c</fullName>
    <label>Query Locator Rows</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>