force-app/main/default/objects/LimitWatcherLog__c/fields/SnapshotLabel__c.field-meta.xml
<CustomField>
    <fullName>SnapshotLabel__c</fullName>
    <description>A label for the snapshot.</description>
    <label>Snapshot Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>