force-app/main/default/objects/LimitWatcherLog__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <length>120</length>
    <type>Text</type>
</CustomField>