force-app/main/default/objects/LimitWatcherLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CallContext__c</columns>
    <columns>Transaction__c</columns>
    <columns>OperationType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>